apps/production/home-assistant-proxy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: websocket-protocol
  namespace: home-assistant-proxy
spec:
  headers:
    customRequestHeaders:
      Connection: Upgrade
      Upgrade: websocket
