apps/production/home-assistant-proxy/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-external
  namespace: home-assistant-proxy
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "http"
spec:
  ports:
  - name: http
    port: 8123
    targetPort: 8123
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant-external
  namespace: home-assistant-proxy
subsets:
  - addresses:
      - ip: 192.168.68.20
    ports:
      - name: http
        port: 8123
        protocol: TCP
