apps/production/home-assistant-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # TODO: Enable Authentik ForwardAuth protection
    # traefik.ingress.kubernetes.io/router.middlewares: authentik-forwardauth-homeassistant@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ha.nerdsbythehour.com
    secretName: home-assistant-tls
  rules:
  - host: ha.nerdsbythehour.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-external
            port:
              number: 8123
